--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,82 +1,128 @@
 html,
-      body {
-          height: 100%;
-          margin: 0;
-          overflow: hidden;
-      }
+body {
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+}
 
-      .ui.sidebar {
-          overflow: visible !important;
-      }
+.custom-window {
+  top: 30px;
+  max-width: 400px;
+  -webkit-transition: top 0.3s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1), visibility 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: top 0.3s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1), visibility 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+  visibility: hidden;
+}
 
-      .ui.modal {
-          padding: 5px;
-          font-size: 9.4pt;
-      }
+.custom-window.open .si-frame {
+  overflow: visible;
+}
 
-      ::placeholder { /* Chrome/Opera/Safari */
-        color: #909;
-      }
+.custom-window.active {
+  top: 0;
+  opacity: 1;
+  visibility: visible;
+}
 
-      #destination {
-          flex-grow: 1;
-          margin-top: 6px;
-      }
+.custom-window .si-content-wrapper {
+  padding-bottom: 10px;
+}
 
-      #infocard {
-          position: absolute;
-          padding: 2px;
-          overflow: auto;
-          max-height: 600px;
-          left: 82%;
-          top: 4%;
-          z-index: 1;
-      }
+.custom-window .si-content {
+  overflow: visible;
+}
 
-      #topbar {
-          height: 50px;
-      }
+.ui.sidebar {
+  overflow: visible !important;
+}
 
-      #loginbutton {
-          margin-top: 10px;
-          margin-bottom: 10px;
-          margin-right: 10px;
-      }
+.ui.modal {
+  padding: 5px;
+  font-size: 9.4pt;
+}
 
-      #signupbutton {
-          margin-left: 40px;
-          margin-top: 10px;
-          margin-bottom: 10px;
-      }
+.ui.button.marker {
+  width: 300px !important ;
+}
 
-      #map {
-          position: absolute;
-          height: 100%;
-          width: 100%;
-          z-index: 0;
-      }
+.menu.sub {
+  overflow: auto !important;
+  max-height: 350px !important;
+}
 
-      #start {
-          margin-top: 7px;
-      }
+::placeholder {
+  /* Chrome/Opera/Safari */
+  color: #909;
+}
 
+#offline-map {
+  font-weight: bold !important;
+  color: white !important;
+}
 
-      #login {
-          position: relative;
-          right: 15px;
-          top: 5px;
-      }
+#destination {
+  flex-grow: 1;
+  margin-top: 6px;
+}
 
-      #signup {
-          position: relative;
-          top: 5px;
-      }
+#infocard {
+  position: absolute;
+  padding: 2px;
+  overflow: auto;
+  max-height: 600px;
+  top: 5%;
+  left: 85%;
+  z-index: 1;
+}
 
-      #header1{
-          position: relative;
-          top: 16px;
-      }
+#cardContent {
+  bottom: 15px;
+}
 
-      #left-sidebar-toggle{
-          padding: 14px;
-      }
+#topbar {
+  height: 50px;
+}
+
+#loginbutton {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
+
+#signupbutton {
+  margin-left: 40px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#map {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+}
+
+#start {
+  font-weight: bold !important;
+  margin-top: 7px;
+}
+
+#login {
+  position: relative;
+  right: 15px;
+  top: 5px;
+}
+
+#signup {
+  position: relative;
+  top: 5px;
+}
+
+#header1 {
+  position: relative;
+  top: 16px;
+}
+
+#left-sidebar-toggle {
+  padding: 14px;
+}
