updated dept coordinates

--- a/app/templates/campusmap.html
+++ b/app/templates/campusmap.html
@@ -757,7 +757,7 @@
            <div class="column">
              <p>
               <p><i class="teal database icon"></i><strong>Departments</strong></p><p>ANTH - Anthropology</p><p>BS - Biological Science</p><p> CH - Chemistry & Bio-Chemistry</p><p> GEOG - Geography</p><p>GS - Geological Sciences</p><p> HIST - History</p><p> MA - Mathematics </p><p> PHIL - Philosophy</p><p> PHY -  Physics</p><p> PSYC - Psychology</p>
-              <p> SOCI - Sociology </p>     
+              <p> SOCI - Sociology </p>
               <div class="ui fitted divider"></div>
               <div class="ui fitted divider"></div>
               <p><i class="teal users icon"></i><strong>Food & Dining</strong><br></p><p>BE - Baja Fresh</p> <p> CJ - Carl's Jr</p> <p> GA - Gastronome</p> <p> JU - Juice It Up</p> <p> PEX - Panda Express</p> <p>MST - Mihaylo Starbucks </p> <p>PLST - Pollak Library Starbucks</p> <p> TSUST - TSU Starbucks</p> <p>CPT - College Park Togos</p> <p> TSUT - TSU Togos</p>
@@ -1082,7 +1082,7 @@
       strokeColor: '#000000',
       strokeOpacity: 0,
       strokeWeight: 2,
-      fillColor: '#239B56',
+      fillColor: '#117A65',
       fillOpacity: 1
     });
 
